testsuite/tests/annotations/should_fail/annfail04.stderr
annfail04.hs:14:12: error: [GHC-28914]
    • Level error:
      instance for ‘Thing Int’ is used at level -1
      but it is bound at level 0
    • In the annotation: {-# ANN f (thing :: Int) #-}

